Mobile: padding bottom fix; Disabled text scrollbar on touch devices;

--- a/components/Home/Footer/Footer.module.css
+++ b/components/Home/Footer/Footer.module.css
@@ -79,7 +79,7 @@
     padding-top: 6rlh;
     align-items: flex-start;
     gap: 0.8em;
-    padding-bottom: 27px;
+    padding-bottom: 47px;
   }
   .footer-bottom > div {
     display: flex;
