--- a/styles/design-system.css
+++ b/styles/design-system.css
@@ -185,7 +185,7 @@ h2,
     --token-font-size-2: 1.85rlh;
 
     --global-padding: 2px;
-    --global-padding-bottom: 26.5px;
+    --global-padding-bottom: 46.5px;
   }
   h1,
   .text-header-1 {
